<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/body_background"
    android:paddingHorizontal="20dp"
    android:paddingVertical="16dp"
    android:orientation="vertical"
    android:weightSum="12"
    tools:context=".activity_congrlatulations">
    <!-- Layer 1 TOP -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        >
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/icon_x"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <!-- Layer 2 Ball -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:layout_weight="6"
        android:gravity="center"
        >
        <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/screen2_text1"
           android:textSize="28sp"
           android:fontFamily="@font/poppins_bold"
           android:textColor="@color/white"
           />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/check"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_star1"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_star2"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_star3"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/screen2_text2_1"
                android:textColor="@color/white"
                android:textSize="19sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/screen2_text2_2"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="20sp"
                android:textColor="@color/white"
                />
        </LinearLayout>

    </LinearLayout>
    <!-- Layer 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="8dp"
        android:layout_weight="2"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/answer_bg"
            android:gravity="center"
            android:layout_marginVertical="5dp"
            android:translationZ="8dp"
            android:elevation="4dp"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/screen2_text3"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/white"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/screen2_btnbg"
            android:gravity="center"
            android:layout_marginVertical="5dp"
            android:translationZ="8dp"
            android:elevation="4dp"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/screen2_text4"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>